fixes in ingest logic
